<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <include
                        layout="@layout/app_bar_other"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <ImageView
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:srcCompat="@mipmap/ic_launcher_round"
                        android:paddingTop="@dimen/nav_header_vertical_spacing"
                        android:contentDescription="@string/nav_header_desc"/>

                <TextView
                        android:text="@string/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="30dp"
                        android:textStyle="bold"
                        android:textColor="@color/darkGrey"/>
                <TextView
                        android:id="@+id/first_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_username"
                        android:drawablePadding="10dp"
                        android:drawableEnd="@drawable/ic_change_user"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@color/grey">
                </View>

                <TextView
                        android:text="@string/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/darkGrey"/>
                <TextView
                        android:id="@+id/last_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_username"
                        android:drawablePadding="10dp"
                        android:drawableEnd="@drawable/ic_change_user"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@color/grey">
                </View>

                <TextView
                        android:text="@string/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/darkGrey"/>

                <TextView
                        android:id="@+id/user_email"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@color/grey">
                </View>

                <TextView
                        android:text="@string/tel_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/darkGrey"/>

                <TextView
                        android:id="@+id/user_phone_number"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_telephone"
                        android:drawablePadding="10dp"
                        android:drawableEnd="@drawable/ic_change_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@color/grey">
                </View>

                <TextView
                        android:text="@string/about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/darkGrey"/>

                <TextView
                        android:id="@+id/user_about"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_about_me"
                        android:drawablePadding="10dp"
                        android:drawableEnd="@drawable/ic_change_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@color/grey">
                </View>

                <TextView
                        android:id="@+id/my_reg_time"
                        android:layout_gravity="center"
                        android:textSize="12sp"
                        android:textColor="@color/darkGrey"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp">
                    <Button
                            android:id="@+id/exit_account"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/exit"
                            android:textColor="@color/colorAccent"
                            android:background="@color/background"
                            android:theme="@style/RoundedCornerButton"/>
                    <Button
                            android:id="@+id/delete_account"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/delete_user"
                            android:textColor="@color/colorAccent"
                            android:background="@color/background"
                            android:theme="@style/RoundedCornerButton"/>
                </LinearLayout>
            </LinearLayout>

            <ProgressBar
                    android:id="@+id/progressBar_user_settings"
                    android:visibility="invisible"
                    android:layout_height="80dp"
                    android:layout_width="80dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
            android:id="@+id/nav_view_settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            android:background="@color/white"
            app:itemTextColor="@color/black"
            app:itemIconTint="@color/black"
            app:headerLayout="@layout/nav_header_main"
            app:menu="@menu/activity_main_drawer"/>
</android.support.v4.widget.DrawerLayout>