...
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <EditText
                    android:id="@+id/change_first_name"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableStart="@drawable/ic_username"
                    android:drawablePadding="10dp"
                    android:hint="@string/change_name"
                    android:inputType="textShortMessage"
...
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <EditText
                    android:id="@+id/change_tel_number"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableStart="@drawable/ic_telephone"
                    android:drawablePadding="10dp"
                    android:hint="@string/change_telephone"
                    android:inputType="phone"
...
